--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-<p>What</p>
+<p>Le plz donat bitcoin for minecraft server. thnk :)</p>
+  <b>bitcoin: 1GgmvCwyPfgcxQtLocn3jbwZfVC4yLnJCH</b>
 </html>
