--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <p>Le plz donat bitcoin for minecraft server. thnk :)</p>
-  <b>bitcoin: 1GgmvCwyPfgcxQtLocn3jbwZfVC4yLnJCH</b>
+  <p> <b>bitcoin: 1GgmvCwyPfgcxQtLocn3jbwZfVC4yLnJCH</b> </p>
+  
+  <style>
+  p {color:white;}
+  </style>
+  <p> https://discord.gg/bKBzC22 </p>
 </html>
