--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
 <p>Le plz donat bitcoin for minecraft server. thnk :)</p>
   <p> <b>bitcoin: 1GgmvCwyPfgcxQtLocn3jbwZfVC4yLnJCH</b> </p>
-  
-  <style>
+  </head>
+<body>
+    <style>
   p {color:white;}
   </style>
   <p> https://discord.gg/bKBzC22 </p>
+</body>
 </html>
