--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <p> <b>bitcoin: 1GgmvCwyPfgcxQtLocn3jbwZfVC4yLnJCH</b> </p>
   </head>
 <body>
-    <style>
-  p {color:white;}
-  </style>
-  <p> https://discord.gg/bKBzC22 </p>
+  <p style="color:white;"> https://discord.gg/bKBzC22 </p>
 </body>
 </html>
